--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   padding: 0px;
   margin: 0px;
-  background-image: url(simon-game-background.jpg);
+  background-image: url(GameMindBackground.jpg);
   background-size: cover;
   max-width: 1400px;
   margin: auto;
